--- a/moviefront/public/index.html
+++ b/moviefront/public/index.html
@@ -11,7 +11,7 @@
     <title>BEF</title>
     <style>
       * {
-        font-family: 'Noto Sans KR', sans-serif;
+        font-family: 'Noto Sans KR', sans-serif !important;
       }
     </style>
   </head>
