--- a/moviefront/public/index.html
+++ b/moviefront/public/index.html
@@ -21,6 +21,11 @@
     <!-- built files will be auto injected -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script>window.Kakao.init("561319a72d5f6266898fa4cc0ea28822")</script>
+    <script>"https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"</script>
+    <script>"https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"</script>
+    <script>"https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    
+    <script>window.Kakao.init("561319a72d5f6266898fa4cc0ea28822")</script>+
   </body>
 </html>
