--- a/moviefront/public/index.html
+++ b/moviefront/public/index.html
@@ -14,8 +14,12 @@
         font-family: 'Noto Sans KR', sans-serif !important;
       }
       </style>
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
-  <body class="bg-dark">
+  <body style="background-color:rgb(0, 0, 0);">
     <div id="app"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- built files will be auto injected -->
@@ -26,6 +30,22 @@
     <script>"https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     
-    <script>window.Kakao.init("561319a72d5f6266898fa4cc0ea28822")</script>+
   </body>
 </html>
+
+<style>
+  .slide-in {
+    animation: change 0.7s ease forwards;
+  }
+
+  @keyframes change {
+    from {
+      transform: translateX(100%);
+      visibility: visible;
+    }
+
+    to {
+      transform: translateX(0%);
+    }
+  }
+</style>
