--- a/moviefront/public/index.html
+++ b/moviefront/public/index.html
@@ -18,12 +18,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>window.Kakao.init("561319a72d5f6266898fa4cc0ea28822");</script>
   </head>
   <body style="background-color:rgb(0, 0, 0);">
     <div id="app"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- built files will be auto injected -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>"https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"</script>
     <script>"https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"</script>
